# Builder

./: .gitignore
task_1/: CMakeLists.txt  main.cxx
task_1/lib/: SqlBuilder.cxx  SqlBuilder.hxx
task_2/: main.cxx
task_2/lib/: SqlBuilder.cxx  SqlBuilder.hxx
